# cxxstdect

./: AUTHORS  Makefile.am  README  bootstrap.sh  configure.ac
doc/: config.dox
src/: Makefile.am  TODO.org  stdect.cpp
src/1-parse/: Makefile.am  nprecord.cpp  nprecord.h  nptrace.cpp  nptrace.h
src/2-reduce/: Makefile.am  reducer.cpp  reducer.h
src/3-loops-id/: Makefile.am  loops_identification.cpp  loops_identification.h
src/4-loops-merge/: Makefile.am  loops_merge.cpp  loops_merge.h
src/5-gui/: Makefile.am  pseudocode.cpp  pseudocode.h
src/model/: Makefile.am  mpicall.cpp  mpicall.h
src/pipeline-utils/: pipeline.h
src/trace-utils/: Makefile.am  ParaverInterface.cpp  ParaverInterface.h  TraceHeader.cpp  TraceHeader.h  tracestream.h
src/wx/: stdect-app.cpp  stdect-app.h  stdect-c++.pjd  structuredetection.cpp  structuredetection.h
